# majster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  camera.c  camera.h  compile_commands.json  config.c  config.h  config.lua  events.c  events.h  frame.lua  main.c  player.lua  renderer2d.c  renderer2d.h  types.h
src/shaders/: CMakeLists.txt  flat.glsl  flat.glsl.h  main.glsl  main.glsl.h
